Fix upload via context menu not working.
Didn't work because browser prevent file selection when the input element is not visible. Work around it by making is hidden (but not technically invisible) and making the context menu item redirect its click to the hidden file input.
Fixes #24

--- a/app/src/skin/app.misc.scss
+++ b/app/src/skin/app.misc.scss
@@ -3,3 +3,10 @@
 	width: 100%;
 	text-align: center;
 }
+
+.hidden {
+	width: 0px;
+	height: 0px;
+	overflow: hidden;
+	visibility: hidden;
+}
